--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "description": "Twig extension for data URI ; Converts data to the data URI Url scheme (RFC 2397)",
     "keywords": ["dataURI", "dataURL", "twig extension"],
     "license": "MIT",
+    "minimum-stability": "dev",
     "authors": [
     {
         "name": "Romain Neutron",
@@ -13,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "twig/extensions": "~1.0",
+        "twig/twig": "^2.7|^3.0",
         "data-uri/data-uri": "~0.2.0"
     },
     "require-dev": {
