--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     }
     ],
     "require": {
+        "ext-fileinfo": "*",
         "php": ">=5.3.2",
         "twig/twig": "^2.7|^3.0",
         "data-uri/data-uri": "~0.2.0"
